force-app/main/default/objects/Homepage_Template__c/Homepage_Template__c.object-meta.xml
<CustomObject>
    <label>Homepage Template</label>
    <nameField>
        <label>Homepage Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Homepage Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>