force-app/main/default/objects/Homepage_Template__c/fields/Footer__c.field-meta.xml
<CustomField>
    <fullName>Footer__c</fullName>
    <label>Footer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>